added basic, routing, templating and a navigation bar

--- a/.gitignore
+++ b/.gitignore
@@ -25,4 +25,4 @@ go.work
 .idea/personal-blog.iml
 .idea/modules.xml
 .idea/personal-blog.iml
-assets/css/pico.classless.min.css.map
+.idea/workspace.xml
