--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,4 +1,4 @@
-name: Build and Deploy
+name: Build and Test
 
 on:
   push:
@@ -6,22 +6,18 @@ on:
       - main
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Build Docker image
-        run: docker build -t my-go-app .
-
-      - name: Run Docker container
-        run: docker run -d -p 42069:42069 my-go-app
-
-      - name: Wait for the application to start
-        run: sleep 5
-
+      - name: Build code 
+      - uses: actions/setup-go@v4
+        with:
+         go-version: '1.21.1'
+      
+      - name: Start Server
+      - run: go run server.go
+      
       - name: Perform tests (optional)
         run: go test ./...
 
