--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,4 +1,4 @@
-name: Build and Test
+name: Build and Test Go Application
 
 on:
   push:
@@ -13,14 +13,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Build code 
-        uses: actions/setup-go@v4
+      - name: Set up Go
+        uses: actions/setup-go@v2
         with:
-         go-version: '1.21.1'
-      
-      - name: Start Server
-        run: go run server.go
-      
-      - name: Perform tests (optional)
-        run: go test ./...
+          go-version: 1.21.1
 
+      - name: Build the Go application
+        run: go build -o main .
+
+      - name: Perform tests
+        run: go test ./...
